--- a/BMICalcutor.html
+++ b/BMICalcutor.html
@@ -4,12 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <title>BMI計算機</title>
+    <style>
+        body{
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+.container {
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+h1 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 30px;
+}
+label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #555;
+    font-size: 18px;
+}
+
+input[type="number"] {
+    width: 100%;
+    padding: 15px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    font-size: 18px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+button {
+    width: 100%;
+    padding: 15px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+#result {
+    margin-top: 20px;
+    padding: 15px;
+    background-color: #e8f5e8;
+    border: 2px solid #4CAF50;
+    border-radius: 5px;
+    font-size: 20px;
+    text-align: center;
+    display: none; /*最初は非表示*/
+}
+</style>        
 </head>
 <body>
     <div class="container">
         <h1>BMI計算機</h1>
 
-```
     <label>身長 (cm):</label>
     <input type="number" id="height" placeholder="170">
     
@@ -36,8 +96,11 @@
         // BMI計算
         var heightM = height / 100; // cmをmに変換
         var bmi = weight / (heightM * heightM);
-        
-        document.getElementById('result').innerHTML = 'BMI: ' + bmi.toFixed(1);
+
+        // 結果
+        document.getElementById('result').innerHTML = 'BMI: ' + bmi.toFixed(1);   
+        //結果が出るまで非表示
+        document.getElementById('result').style.display = 'block';
     }
 </script>
 </body>
