--- a/HelloGame.html
+++ b/HelloGame.html
@@ -25,7 +25,7 @@
     count++;　//カウントするのに必要
 
     const message = document.getElementById("message");
-    message.textContent = `ボタンを ${count} 回 押した！`;
+    message.textContent = `こんにちは！ボタンを ${count} 回 押した！`;
 
     if (count % 3 === 0) { // 3回に1回だけ色を変える
       const colors = ["red", "blue", "green", "orange", "purple"];
