--- a/BMICalcutor.html
+++ b/BMICalcutor.html
@@ -91,7 +91,7 @@ button:hover {
     function calculateBMI() {
         // 入力値を取得(parseFloatで小数点以下を保持)
         const height = parseFloat(document.getElementById('height').value);
-        const weight = parseFloat(document.getElementById('weight').value;
+        const weight = parseFloat(document.getElementById('weight').value);
         
         // 入力チェック(Not-a-number)
         if (isNaN(height) || isNaN(weight)) {
