--- a/MiniGame/index.html
+++ b/MiniGame/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<h1>ボタンを押して！</h1>
+<h1>RPG風ミニゲーム</h1>
 
-<button onclick="sayHello()">押して！</button>
+<button onclick="sayHello()">戦闘開始</button>
 
 <p id="message"></p>
 
