--- a/MiniGame/index.html
+++ b/MiniGame/index.html
@@ -9,7 +9,7 @@
 
 <h1>RPG風ミニゲーム</h1>
 
-<button onclick="sayHello()">戦闘開始</button>
+<button id="myButton" onclick="sayHello()">戦闘開始</button>
 
 <p id="message"></p>
 
